B2BCC Loyalty Cloud/sfdx-source/force-app/main/default/objects/LoyaltySiteMapping__mdt/LoyaltySiteMapping__mdt.object-meta.xml
<CustomObject>
    <label>Loyalty Site Mapping</label>
    <pluralLabel>Loyalty Site Mappings</pluralLabel>
</CustomObject>