B2BCC Loyalty Cloud/sfdx-source/force-app/main/default/objects/LoyaltySiteMapping__mdt/fields/AccrualRatio__c.field-meta.xml
<CustomField>
    <fullName>AccrualRatio__c</fullName>
    <description>Points awarded per monetary unit (e.g. 1.0 = 1 point per EUR). Read by the accrual Flow; not used by My Account widgets.</description>
    <label>Accrual Ratio (points per unit)</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>