B2BCC Loyalty Cloud/sfdx-source/force-app/main/default/objects/LoyaltySiteMapping__mdt/fields/LoyaltyProgramId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyProgramId__c</fullName>
    <label>Loyalty Program Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>