B2BCC Loyalty Cloud/sfdx-source/force-app/main/default/objects/LoyaltySiteMapping__mdt/fields/MinPointsToRedeem__c.field-meta.xml
<CustomField>
    <fullName>MinPointsToRedeem__c</fullName>
    <description>Lower bound of points a buyer must redeem in a single checkout, if any.</description>
    <label>Min Points to Redeem</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>