B2BCC Loyalty Cloud/sfdx-source/force-app/main/default/objects/LoyaltySiteMapping__mdt/fields/RedemptionRatio__c.field-meta.xml
<CustomField>
    <fullName>RedemptionRatio__c</fullName>
    <description>Points required per monetary unit of discount (e.g. 10 = 10 points buys 1 EUR off). Used by the checkout redemption LWC.</description>
    <label>Redemption Ratio (points per unit)</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>