B2BCC Loyalty Cloud/sfdx-source/force-app/main/default/objects/LoyaltySiteMapping__mdt/fields/WebStoreId__c.field-meta.xml
<CustomField>
    <fullName>WebStoreId__c</fullName>
    <label>WebStore Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>